# gameover

./: .gitignore  CMakeLists.txt  Makefile  build-libs-linux.sh  cli.py  main  premake5.lua
gameover/: CMakeLists.txt
gameover/include/: GAMEOVER.h
gameover/include/gameover/: app.h  core.h  engine.h  log.h  main.h
gameover/include/gameover/core/: imguiWindow.h  opengl_window.h  window.h
gameover/include/gameover/graphics/: framebuffer.h  mesh.h  rendercommands.h  shader.h
gameover/include/gameover/input/: joystick.h  keyboard.h  mouse.h
gameover/include/gameover/managers/: logmanager.h  rendermanager.h
gameover/src/: app.cpp  engine.cpp
gameover/src/core/: imguiWindow.cpp  opengl_window.cpp  window.cpp
gameover/src/graphics/: framebuffer.cpp  mesh.cpp  rendercommands..cpp  shader.cpp
gameover/src/input/: joystick.cpp  keyboard.cpp  mouse.cpp
gameover/src/manager/: logmanager.cpp
gameover/src/managers/: logmanager.cpp  rendermanager.cpp
gameovereditor/: CMakeLists.txt  imgui.ini
gameovereditor/src/: main.cpp
platform/_tools_/: cmd-tools-android.sh  cmd-tools-windows.bat
src/: application.h  application.hpp  main.cpp
tools/: build-android.py  buildsln.py  gencmake.py  gensln.py  globals.py  version.py
vendors/glad/: CMakeLists.txt  premake5.lua
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/imgui_opengl/: CMakeLists.txt
